--- a/package.json
+++ b/package.json
@@ -1,45 +1,20 @@
 {
-  "name": "diploma_ui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.68",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "antd": "^5.9.0",
-    "codemirror": "^5.65.0",
-    "sass": "^1.66.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-codemirror2": "^7.3.0",
-    "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.10"
-  },
+  "name": "blog-posts",
+  "version": "0.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "codemirror": "^5.65.0",
+    "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
+    "react-dom": "^17.0.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.49.0",
+    "vite": "^2.7.2"
   }
 }
