--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-posts",
+  "name": "diploma_ui",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,14 +7,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "codemirror": "^5.65.0",
+    "codemirror": "^5.65.16",
     "react": "^17.0.2",
-    "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.2"
+    "react-codemirror2": "^7.3.0",
+    "react-dom": "^17.0.2",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^5.3.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/lodash": "^4.14.197",
+    "@types/react": "^18.2.47",
     "@vitejs/plugin-react": "^1.0.7",
-    "sass": "^1.49.0",
+    "prettier": "3.0.3",
+    "sass": "^1.69.7",
     "vite": "^2.7.2"
   }
 }
