--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.12.8",
     "codemirror": "^5.65.16",
     "react": "^17.0.2",
     "react-codemirror2": "^7.3.0",
