--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-codemirror2": "^7.3.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.21.2",
     "@types/react-dom": "^18.0.0",
     "typescript": "^5.3.3"
   },
