--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "antd": "^5.12.8",
+    "axios": "^1.6.7",
     "codemirror": "^5.65.16",
     "react": "^17.0.2",
     "react-codemirror2": "^7.3.0",
