--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "antd": "^5.12.8",
     "axios": "^1.6.7",
     "codemirror": "^5.65.16",
+    "classnames": "^2.5.1",
     "react": "^17.0.2",
     "react-codemirror2": "^7.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.21.2",
+    "react-markdown": "^8.0.6",
+    "remark-gfm": "^4.0.0",
     "@types/react-dom": "^18.0.0",
     "typescript": "^5.3.3"
   },
